import { fireEvent, render } from '@testing-library/react';

import { withProviders } from '@dt-dds/react-core';

import { Checkbox } from './Checkbox';

describe('<Checkbox /> component', () => {
  const ProvidedCheckBox = withProviders(Checkbox);

  it('renders checkbox correctly', () => {
    const { container } = render(
      <ProvidedCheckBox
        isChecked={false}
        isDisabled={false}
        label='Label'
        onChange={() => null}
      />
    );
    expect(container).toMatchSnapshot();
  });

  it('calls onChange when clicked', () => {
    const onChangeMock = jest.fn();
    const { getByRole } = render(
      <ProvidedCheckBox
        isChecked={false}
        isDisabled={false}
        onChange={onChangeMock}
      />
    );

    fireEvent.click(getByRole('checkbox'));

    expect(onChangeMock).toHaveBeenCalledTimes(1);
  });

  it('does not call onChange when disabled', () => {
    const onChangeMock = jest.fn();
    const { getByRole } = render(
      <ProvidedCheckBox isChecked={false} isDisabled onChange={onChangeMock} />
    );

    const checkbox = getByRole('checkbox');
    fireEvent.click(checkbox);

    expect(onChangeMock).not.toHaveBeenCalled();
    expect(checkbox).toBeDisabled();
  });

  it('sets indeterminate state correctly', () => {
    const { getByRole } = render(
      <ProvidedCheckBox
        isChecked={false}
        isIndeterminate
        onChange={() => null}
      />
    );

    const checkbox = getByRole('checkbox') as HTMLInputElement;

    expect(checkbox.indeterminate).toBe(true);
    expect(checkbox).toHaveAttribute('aria-checked', 'mixed');
  });

  it('sets error state correctly', () => {
    const { getByRole } = render(
      <ProvidedCheckBox hasError isChecked={false} onChange={() => null} />
    );

    expect(getByRole('checkbox')).toHaveAttribute('aria-invalid', 'true');
  });

  it('renders without label and uses aria-label', () => {
    const { getByRole } = render(
      <ProvidedCheckBox
        aria-label='Custom label'
        isChecked={false}
        onChange={() => null}
      />
    );

    expect(getByRole('checkbox')).toHaveAttribute('aria-label', 'Custom label');
  });
});
